Edit img and ol ans ul

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -10,6 +10,14 @@
    
     <h1>Odin Recipes</h1>
 
+    <img src="./img/boiledeggs.jpeg" height="310" width="310" 
+
+    <ul>
+        <li><a href="recipes/boiledeggs.html">BoiledEggs</a></li>
+
+    
+
+    </ul>
   
 </body>
 
